# Desafio-Lighouse-2

./: Readme.md  [Lighthouse] Desafio Ciência de Dados 2025-3.docx  pyproject.toml
docs/: 1_start.md  2_project.md
notebooks/: exploratory_data.ipynb  modeling.ipynb
notebooks/model_class/: data_model.ipynb  data_modeling.py
notebooks/utils/: exploratory_data_utils.py
src/data/gold/: teste_indicium_precificacao_OHE.csv
src/data/silver/: media_preco_bairros.csv
src/data/testing_data/: test.json
src/models/: xg_reg_model.pkl
