[project]
name = "desafio-lighouse-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Akyla",email = "akylaaquino@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
